2016-12-06 Rohin Narayan <narayan@cern.ch>
	* Added continuous b-tag weight bin

2016-12-1 Rohin Narayan <narayan@cern.ch>
	* Added muon BDT score and input variables

2016-11-30 Robert Wolff <robert.wolff@cern.ch>
	* Updated Electron Charge ID Selector Tool usage BDT output for loose, medium and tight electrons
	* removed ttbar history and heavy flavour classification for new p2879 MC samples

2016-11-22 Robert Wolff <robert.wolff@cern.ch>
	* Fixed Run1 OLR application

2016-11-16 Rhys Roberts <rhys.thomas.roberts@cern.ch>
	* Added new PromptLepton input and BDT variables

2016-11-10 Babar Ali <babar.ali@cern.ch>
	* Enabled the Run-1 OLR. For mu-jet OLR is min DR (0.4, 0.04 + 10 GeV / pt_mu)
	* Removed the isolation requirement on muons. Muons are with NO Iso by default.

2016-11-10 Robert Wolff <robert.wolff@cern.ch>
	* added additional packages and updated submission scripts

2016-11-09 Kevin De Vasconcelos Corga <kevin.devasconcelos@cern.ch>
	* added b-tagging scale factors for MV2c10 60% and 85% WP

2016-11-08 Robert Wolff <robert.wolff@cern.ch>
	* added more lep+tau triggers
	* added trigger matching for dilepton triggers (lep.isTrigMatchDLT_X)

2016-11-05 Babar Ali <babar.ali@cern.ch>
	* added isHadronic info in flat vars.

2016-11-03 Robert Wolff <robert.wolff@cern.ch>
	* added additional triggers (dilepton and lepton+tau)
	* updated for AnalysisTop, 2.4.21
	* updated GRL and iLumiCalc file for full 2016 luminosity
	* added electron Charge Flip Tagger Tool BDT output
	* added truth H,Top,W,Z count for truth jets

2016-10-18 Robert Wolff <robert.wolff@cern.ch>
	* added dilepton trigger HLT_e26_lhmedium_nod0_L1EM22VHI_mu8noL1

2016-10-14 Robert Wolff	<robert.wolff@cern.ch>
	* fix tag for one MC sample in submission
	* added latest TopDataPreparation package to manual checkout for Vgamma samples

2016-10-12 Robert Wolff <robert.wolff@cern.ch>
	* fix rc checkout in setupRCandGrid.sh

2016-10-11 Robert Wolff <robert.wolff@cern.ch>