@@ -1,3 +1,6 @@
+2016-12-14 Robert Wolff <robert.wolff@cern.ch>
+	* Fixed and updated names of pdfinfo variables for truth mc events
+
 2016-12-06 Rohin Narayan <narayan@cern.ch>
 	* Added continuous b-tag weight bin
 
